[gd_scene load_steps=2 format=2]

[ext_resource path="res://hud/conversation_screen.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
margin_bottom = 100.0

[node name="Panel2" type="Panel" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -100.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel2"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel2/VBoxContainer"]
margin_right = 40.0
margin_bottom = 14.0
mouse_filter = 0

[node name="VBoxContainerAnswers" type="VBoxContainer" parent="Panel2"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label1" type="Label" parent="Panel2/VBoxContainerAnswers"]
margin_right = 40.0
margin_bottom = 14.0
mouse_filter = 0

[node name="Label2" type="Label" parent="Panel2/VBoxContainerAnswers"]
margin_top = 18.0
margin_right = 40.0
margin_bottom = 32.0
mouse_filter = 0

[connection signal="gui_input" from="Panel2/VBoxContainer/Label" to="." method="_on_Label_gui_input"]
